; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_stor-layout.c_bit_from_pos.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_stor-layout.c_bit_from_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PLUS_EXPR = common dso_local global i32 0, align 4
@MULT_EXPR = common dso_local global i32 0, align 4
@bitsizetype = common dso_local global i32 0, align 4
@bitsize_unit_node = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bit_from_pos(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @PLUS_EXPR, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @MULT_EXPR, align 4
  %8 = load i32, i32* @bitsizetype, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @fold_convert(i32 %8, i32 %9)
  %11 = load i32, i32* @bitsize_unit_node, align 4
  %12 = call i32 @size_binop(i32 %7, i32 %10, i32 %11)
  %13 = call i32 @size_binop(i32 %5, i32 %6, i32 %12)
  ret i32 %13
}

declare dso_local i32 @size_binop(i32, i32, i32) #1

declare dso_local i32 @fold_convert(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
